<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroEmailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_passo"
        android:layout_width="match_parent"
        android:layout_height="56dp">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_campo_email_instrucao"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/campo_email_instrucao"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_light" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/campo_cadastro_light"
        android:paddingTop="10dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_input_email"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/campo_email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_ou_email"
        android:layout_width="157dp"
        android:layout_height="21dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/linhadark"
        android:drawableRight="@drawable/linhadark"
        android:gravity="center"
        android:text="OU"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:fontFamily="@font/roboto_light" />

    <Button
        android:id="@+id/buttonFacebookLogin"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/botao_entrar_facebook"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="35dp"
        android:text="@string/botao_cadastrar_facebook"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/botao_entrar_google"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_entrar_google"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="35dp"
        android:text="@string/botao_entrar_google"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:text="@string/botao_cadastrar_google" />

    <ProgressBar
        android:id="@+id/pgBar"
        style="@style/GenericProgressIndicator"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_proxima_etapa_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:background="@drawable/botao_proxima_etapa"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/botao_proxima_etapa"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>