<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroValidacaoEmailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_passo"
        android:layout_width="match_parent"
        android:layout_height="56dp">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="224dp"
        android:layout_height="38dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/campo_validacao_email_instrucao"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_light" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="32dp"
        android:text="@string/campo_validacao_email_email"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_regular" />

    <LinearLayout
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_codigo"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@drawable/campo_validacao_email"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:id="@+id/invalidCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="Código inválido!"
            android:visibility="gone"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="18dp"
            android:text="@string/nao_recebi_meu_codigo"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_bold" />

        <Button
            android:id="@+id/button_proxima_etapa_validacao_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:background="@drawable/botao_proxima_etapa"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/botao_proxima_etapa"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>