<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroCepEnderecoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_passo"
        android:layout_width="match_parent"
        android:layout_height="56dp">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/campo_logradouro_instrucao"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_light" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/campo_cadastro_light"
        android:paddingTop="10dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_input_logradouro"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            android:enabled="false"
            android:textColor="#474747"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/campo_logradouro"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/campo_bairro_instrucao"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_light" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/campo_cadastro_light"
        android:paddingTop="10dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_input_bairro"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            android:enabled="false"
            android:textColor="#474747"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/campo_bairro"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="130dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/campo_cadastro_light"
            android:paddingTop="10dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_input_estado"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                android:enabled="false"
                android:textColor="#474747"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/campo_estado"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="100dp"
            android:layout_height="19dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:text="@string/campo_estado_instrucao"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="100dp"
            android:layout_height="19dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/campo_cidade_instrucao"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="180dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/campo_cadastro_light"
            android:paddingTop="10dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_input_cidade"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                android:enabled="false"
                android:textColor="#474747"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/campo_cidade_instrucao"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"

                />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="100dp"
            android:layout_height="19dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:text="@string/campo_numero_instrucao"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="130dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/campo_cadastro_light"
            android:paddingTop="10dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_input_numero"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/campo_numero"
                android:inputType="number"
                android:maxLength="4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="180dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/campo_cadastro_light"
            android:paddingTop="10dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_input_complemento"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/campo_complemento"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="100dp"
            android:layout_height="22dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/campo_complemento_instrucao"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_proxima_etapa_cep_endereco"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:background="@drawable/botao_proxima_etapa"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/botao_proxima_etapa"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>